# GenerativeTopologicalSymphonies

./: .gitignore  README.md  README_GITHUB_BUNDLE.md  pyproject.toml
configs/: baseline.yaml  baseline_asap_score.yaml  baseline_structured.yaml  conductor.yaml  conductor_asap_score.yaml  conductor_long.yaml  conductor_subset_long.yaml  diffusion_unet_asap_score.yaml  euclidean.yaml  euclidean_asap_score.yaml  euclidean_asap_score_push.yaml  euclidean_poster.yaml  euclidean_structured.yaml  euclidean_structured_augmented.yaml  euclidean_structured_tuned.yaml  figaro_asap_score.yaml  full_model.yaml  hypercube_r3_asap_score.yaml  ingram_1_asap_score.yaml  ingram_2_asap_score.yaml  magenta_music_transformer_asap_score.yaml  music_transformer_asap_score.yaml  plane_r2_asap_score.yaml  poster_alignment.yaml  poster_alignment_asap_score.yaml  poster_alignment_asap_score_push.yaml  poster_alignment_structured.yaml  poster_alignment_structured_augmented.yaml  poster_alignment_structured_tuned.yaml  poster_geometry_ablation_asap_score.yaml  refiner.yaml  sphere_s2_asap_score.yaml  tension.yaml  tension_t3_asap_score.yaml  tension_t3_asap_score_push.yaml  tension_t3_poster.yaml  tension_t3_structured.yaml  tension_t3_structured_augmented.yaml  tension_t3_structured_tuned.yaml  torus.yaml  (+8 more)
data/eval_sets/: README.md
data/processed/: README.md
data/raw/: README.md
data/splits/: README.md
docs/: benchmark_scope.md  poster_alignment.md
outputs/runs/: README.md
src/evaluation/: __init__.py  cadence.py  diagnose_recurrence.py  evaluate_samples.py  fluency.py  geometry.py  matched_reference.py  playability.py  poster_report.py  recurrence.py  run_ablation_suite.py  sweep_decoding.py  tonal.py
src/inference/: __init__.py  cleanup.py  generate.py  refine.py  (+1 more)
tests/: test_baseline_training.py  test_benchmark_models.py  test_conductor_training.py  test_decoding_sweep.py  test_generation_evaluation.py  test_geometry_evaluation.py  test_ingram_aliases.py  test_phase0_pipeline.py  test_phase6_evaluation.py  test_poster_report.py  test_refiner_training.py  test_tension_training.py  test_torus_training.py
(+155 files in other folders)
